[gd_scene load_steps=16 format=3 uid="uid://1s5qidco641t"]

[ext_resource type="Script" path="res://Characters/CharacterBase.gd" id="1_bax7o"]
[ext_resource type="PackedScene" uid="uid://cmdilq5ptgg8g" path="res://Characters/PuppetBase.tscn" id="2_1bt1c"]
[ext_resource type="PackedScene" uid="uid://ckqtvo1inhvtn" path="res://Props/Weapons/Slapper/Slapper.tscn" id="2_26305"]
[ext_resource type="PackedScene" uid="uid://bwie7ixf4v1vw" path="res://Props/Weapons/Pistol/Pistol.tscn" id="3_c6pft"]
[ext_resource type="PackedScene" uid="uid://bhxw75oi8yofw" path="res://Props/Weapons/Rifle/Rifle.tscn" id="4_7rqvl"]
[ext_resource type="Script" path="res://Characters/Voice.gd" id="4_8ihun"]
[ext_resource type="PackedScene" uid="uid://barsvh0ntyosw" path="res://Props/Weapons/Shotgun/Shotgun.tscn" id="5_gqd55"]
[ext_resource type="AudioStream" uid="uid://dvwslqt03fwb6" path="res://Props/Weapons/Slapper/Slap.ogg" id="5_tm5o4"]
[ext_resource type="AudioStream" uid="uid://b56r0e1ges6xc" path="res://Characters/Audio/footstep1.ogg" id="9_4go11"]
[ext_resource type="Script" path="res://RandomAudio.gd" id="9_druge"]
[ext_resource type="AudioStream" uid="uid://doju4xf4dtgt" path="res://Characters/Audio/footstep2.ogg" id="10_i4x8w"]
[ext_resource type="AudioStream" uid="uid://brbwtdst5aopq" path="res://Characters/Audio/footstep3.ogg" id="11_ccipe"]
[ext_resource type="AudioStream" uid="uid://cxbr801up84rw" path="res://Characters/Audio/footstep4.ogg" id="12_hl0ln"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yxej"]
radius = 0.35
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ulpgl"]
albedo_color = Color(0.839216, 0.6, 0.466667, 1)
subsurf_scatter_enabled = true
subsurf_scatter_strength = 1.0
subsurf_scatter_skin_mode = true

[node name="CharacterBase" type="CharacterBody3D" groups=["players"]]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4278190080
script = ExtResource("1_bax7o")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_5yxej")

[node name="Weapons" type="Node3D" parent="."]
transform = Transform3D(-0.221882, -0.158457, -0.962112, -0.959478, 0.211249, 0.186482, 0.173696, 0.964503, -0.198909, 0.175867, 1.38609, -0.272339)

[node name="Slapper" parent="Weapons" instance=ExtResource("2_26305")]
transform = Transform3D(-0.224442, -0.501342, 0.835634, -0.399893, 0.829368, 0.390176, -0.888659, -0.246592, -0.386628, 0.00662899, -0.0015403, 0.0135412)
visible = false

[node name="Pistol" parent="Weapons" instance=ExtResource("3_c6pft")]
transform = Transform3D(-0.251316, -0.445546, 0.859261, -0.304137, 0.87914, 0.366899, -0.918881, -0.169126, -0.356449, -0.0750129, -0.0176662, 0.0586265)
visible = false

[node name="Rifle" parent="Weapons" instance=ExtResource("4_7rqvl")]
transform = Transform3D(-0.277545, -0.400644, 0.873187, -0.250446, 0.90764, 0.336847, -0.927494, -0.125196, -0.35225, -0.0631537, -0.00211084, 0.0455215)
visible = false

[node name="Shotgun" parent="Weapons" instance=ExtResource("5_gqd55")]
transform = Transform3D(-0.280149, -0.40288, 0.871323, -0.249981, 0.906971, 0.338989, -0.926837, -0.122847, -0.3548, -0.0860773, 0.00929606, 0.0509185)
visible = false

[node name="AimHelper" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="Camera" type="Camera3D" parent="AimHelper"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.210124)
cull_mask = 1048567

[node name="ShootCast" type="RayCast3D" parent="AimHelper"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -999)
collision_mask = 9
hit_back_faces = false
collide_with_areas = true

[node name="PuppetBase" parent="." instance=ExtResource("2_1bt1c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0529786)

[node name="Skeleton" parent="PuppetBase" index="2"]
bones/1/position = Vector3(1.61993e-09, 0.898012, -0.0641973)
bones/2/rotation = Quaternion(0.0117828, 8.14714e-05, 0.000906867, 0.99993)
bones/4/rotation = Quaternion(0.0109861, 0.000111045, 0.000828496, 0.999939)
bones/5/rotation = Quaternion(0.0145808, 0.000129797, 0.00111468, 0.999893)
bones/7/rotation = Quaternion(0.00830262, 0.880898, 0.268814, 0.389472)
bones/8/rotation = Quaternion(-0.0185715, -0.724076, -0.0180329, 0.689235)
bones/9/rotation = Quaternion(-0.391812, 0.730288, 0.149128, 0.539373)
bones/10/rotation = Quaternion(2.38419e-07, -2.98023e-08, -1.19209e-07, 1)
bones/11/rotation = Quaternion(0.0324972, -0.0145127, -0.07362, 0.996651)
bones/12/rotation = Quaternion(-5.96047e-08, -2.38419e-07, 2.38419e-07, 1)
bones/14/rotation = Quaternion(0.00351076, 0.00625045, -0.00325579, 0.999969)
bones/15/rotation = Quaternion(-5.96046e-08, 5.96046e-08, 1.78814e-07, 1)
bones/16/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/17/rotation = Quaternion(0.3392, 0.0721146, 0.0418192, 0.937013)
bones/18/rotation = Quaternion(-0.0177395, 0.184228, 0.00458947, 0.982713)
bones/20/rotation = Quaternion(-0.13805, 0.949134, 0.248118, 0.136105)
bones/21/rotation = Quaternion(0.242276, 0.397926, -0.235513, 0.852931)
bones/22/rotation = Quaternion(-0.274016, -0.82952, -0.120143, 0.471569)
bones/23/rotation = Quaternion(5.96046e-08, -5.96046e-08, 1.78814e-07, 1)
bones/24/rotation = Quaternion(0.00967887, 0.0226371, 0.0600131, 0.997894)
bones/25/rotation = Quaternion(-0.00151676, -0.0236477, 0.00604769, 0.999701)
bones/27/rotation = Quaternion(-0.00542152, -0.0134419, -0.0367876, 0.999218)
bones/28/rotation = Quaternion(0.00654057, -0.0449628, 0.0100334, 0.998917)
bones/29/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/30/rotation = Quaternion(-0.348366, 0.485597, -0.54698, 0.586216)
bones/31/rotation = Quaternion(-0.0929818, 0.136922, -0.113451, 0.979661)
bones/33/rotation = Quaternion(-0.138525, 0.0995234, 0.985129, -0.0206448)
bones/34/rotation = Quaternion(0.00104182, 0.999995, -0.00295529, -0.000185098)
bones/35/rotation = Quaternion(0.0839356, 0.765003, -0.628583, 0.112284)
bones/38/rotation = Quaternion(0.133242, -0.140535, 0.980932, -0.0164293)
bones/39/rotation = Quaternion(0.0311652, 0.995585, 0.088372, -0.00549458)
bones/40/rotation = Quaternion(-0.0897883, 0.665457, -0.734987, -0.0943303)
bones/41/rotation = Quaternion(-4.21469e-08, 1, 5.96047e-08, -1.26441e-07)

[node name="Body" parent="PuppetBase/Skeleton" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_ulpgl")

[node name="Head" parent="PuppetBase/Skeleton" index="1"]
transform = Transform3D(0.999984, -0.00567195, 0.000857151, 0.0057201, 0.997195, -0.0746295, -0.000431451, 0.0746332, 0.997211, -0.000901076, 1.57744, -0.0399429)

[node name="Neck" parent="PuppetBase/Skeleton" index="2"]
transform = Transform3D(0.999998, -0.00181169, 0.000184302, 0.00181553, 0.999721, -0.0235637, -0.000141561, 0.023564, 0.999722, 0.00165831, 1.45875, -0.0237236)

[node name="Chest" parent="PuppetBase/Skeleton" index="3"]
transform = Transform3D(0.999998, -0.00181169, 0.000184302, 0.00181553, 0.999721, -0.0235637, -0.000141561, 0.023564, 0.999722, 7.13329e-10, 1.13618, -0.0868668)

[node name="Stomach" parent="PuppetBase/Skeleton" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.61993e-09, 0.898012, -0.0641973)

[node name="R_UpperArm" parent="PuppetBase/Skeleton" index="5"]
transform = Transform3D(0.195278, -0.839483, -0.507085, -0.348218, 0.424004, -0.836041, 0.916848, 0.339837, -0.209524, 0.194493, 1.39807, -0.0335437)

[node name="R_Forearm" parent="PuppetBase/Skeleton" index="6"]
transform = Transform3D(0.689251, -0.646228, 0.327601, 0.375016, -0.068671, -0.924471, 0.619916, 0.760049, 0.195014, 0.230639, 1.25289, -0.179014)

[node name="R_Hand" parent="PuppetBase/Skeleton" index="7"]
transform = Transform3D(-0.221882, -0.158457, -0.962112, -0.959478, 0.211249, 0.186482, 0.173696, 0.964503, -0.198909, 0.175867, 1.38609, -0.325317)

[node name="GunTransform" parent="PuppetBase/Skeleton/R_Hand" index="1"]
remote_path = NodePath("../../../../Weapons")

[node name="L_UpperArm" parent="PuppetBase/Skeleton" index="8"]
transform = Transform3D(0.225125, 0.854434, 0.468254, -0.664698, 0.48607, -0.567373, -0.712387, -0.183518, 0.677367, -0.195428, 1.39736, -0.0334886)

[node name="L_Forearm" parent="PuppetBase/Skeleton" index="9"]
transform = Transform3D(0.458345, 0.86518, -0.20343, -0.532977, 0.450728, 0.716087, 0.711235, -0.219791, 0.66771, -0.23661, 1.20255, 0.0289202)

[node name="L_Hand" parent="PuppetBase/Skeleton" index="10"]
transform = Transform3D(-0.222833, 0.266699, 0.937666, -0.774017, 0.536348, -0.336495, -0.592658, -0.800752, 0.0869139, -0.239624, 1.00096, -0.00982898)

[node name="R_Thigh" parent="PuppetBase/Skeleton" index="11"]
transform = Transform3D(-0.963953, -0.00521816, 0.26602, -0.0696822, -0.95996, -0.271332, 0.256784, -0.280088, 0.924993, 0.0851499, 0.880523, -0.0593682)

[node name="R_Shin" parent="PuppetBase/Skeleton" index="12"]
transform = Transform3D(0.96608, -0.0191623, -0.257532, 0.0064412, -0.995145, 0.0982091, -0.258164, -0.0965366, -0.961266, 0.109795, 0.4881, -0.207463)

[node name="R_Foot" parent="PuppetBase/Skeleton" index="13"]
transform = Transform3D(-1, 1.49012e-08, -2.81259e-07, -3.05474e-07, 6.25849e-07, 1, 2.98023e-08, 1, -4.76837e-07, 0.119459, 0.114016, -0.180125)

[node name="L_Thigh" parent="PuppetBase/Skeleton" index="14"]
transform = Transform3D(-0.960769, 0.0131025, -0.27704, -0.0682486, -0.979338, 0.190367, -0.268822, 0.201806, 0.941812, -0.0851499, 0.880523, -0.0593682)

[node name="L_Shin" parent="PuppetBase/Skeleton" index="15"]
transform = Transform3D(0.960694, 0.012739, 0.277319, 0.0662761, -0.980586, -0.18455, 0.269585, 0.195676, -0.942887, -0.106126, 0.464189, -0.00681943)

[node name="L_Foot" parent="PuppetBase/Skeleton" index="16"]
transform = Transform3D(-1, -2.5928e-06, -1.39698e-06, -1.40816e-06, -2.98023e-08, 1, -2.71201e-06, 1, 1.49012e-07, -0.11946, 0.114016, 0.127272)

[node name="DmgLbl" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.88315, 0)

[node name="Voice" type="Node3D" parent="."]
script = ExtResource("4_8ihun")

[node name="Slapped" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_tm5o4")
bus = &"SFX"

[node name="Footsteps" type="Node3D" parent="."]
script = ExtResource("9_druge")

[node name="Footsteps1" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("9_4go11")
unit_size = 2.0
max_distance = 3.0
bus = &"SFX"

[node name="Footsteps2" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("10_i4x8w")
unit_size = 2.0
max_distance = 3.0
bus = &"SFX"

[node name="Footsteps3" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("11_ccipe")
unit_size = 2.0
max_distance = 3.0
bus = &"SFX"

[node name="Footsteps4" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("12_hl0ln")
unit_size = 2.0
max_distance = 3.0
bus = &"SFX"

[connection signal="take_damage" from="PuppetBase/Skeleton/Head/HeadArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/Neck/NeckArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/Chest/ChestArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/Stomach/StomachArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_UpperArm/R_UpperArmArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_Forearm/R_ForearmArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_Hand/R_HandArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_UpperArm/L_UpperArmArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_Forearm/L_ForearmArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_Hand/L_HandArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_Thigh/R_ThighArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_Shin/R_ShinArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/R_Foot/R_FootArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_Thigh/L_ThighArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_Shin/L_ShinArea" to="." method="_take_damage"]
[connection signal="take_damage" from="PuppetBase/Skeleton/L_Foot/L_FootArea" to="." method="_take_damage"]

[editable path="Weapons/Pistol"]
[editable path="Weapons/Pistol/Mesh"]
[editable path="Weapons/Rifle"]
[editable path="Weapons/Shotgun"]
[editable path="PuppetBase"]
